Implement blog functionality with routing, add blog data, and enhance SEO with sitemap and robots.txt

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.3",
-    "lucide-react": "^0.292.0"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -24,4 +25,3 @@
     "vite": "^5.0.8"
   }
 }
-
